--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "build": "rm -rf ./lib && babel -d ./lib ./modules -s"
+    "build": "rm -rf ./lib && babel -d ./lib ./modules -s",
+    "build-debug": "babel -d ./lib --watch ./modules"
   },
   "license": "MIT",
   "author": "Anil Keshari",
@@ -13,7 +14,8 @@
   "dependencies": {
     "jquery": "^3.1.0",
     "tisko-layout": "github:signingstar/tisko-layout",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -42,6 +44,5 @@
     "source-map-support": "^0.4.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
-  },
-  "private": true
+  }
 }
